@@ -1,3 +1,9 @@
+2004-02-16  David Jee  <djee@redhat.com>
+
+	* java/awt/GridBagLayout.java
+	(calcCellSizes): Rows or columns with zero sizes should still be
+	considered for extra space distribution.
+
 2004-02-16  Kim Ho  <kho@redhat.com>
 
 	* javax/swing/JLabel.java: Re-implement.
